added a place holder

--- a/index.html
+++ b/index.html
@@ -9,12 +9,12 @@
 		<h1>What To Do!</h1>
 		<ul id="writeHere"></ul>
 		<form id="addItem">
-			<input type="text" value="Type Here!"></input>
+			<input type="text" placeholder="Type Here!"></input>
 			<input type="submit" value="Add to the list!"></input>
 		</form>
 		<input type="submit" value="Clear list" id="clearList"></input>
 
-		<h2>To remove items from your list simply click on the 'X'!</h2>
+		<h2>To remove items from your list simply click on the 'X"!</h2>
 	</div>
 
 
